--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "consumer": "node dist/consumer.js"
   },
   "dependencies": {
+    "@babel/runtime": "^7.4.3",
     "amqplib": "^0.5.3",
     "dotenv": "^7.0.0",
     "eslint": "^5.16.0",
@@ -22,6 +23,7 @@
     "@babel/cli": "7.4.3",
     "@babel/core": "7.4.3",
     "@babel/node": "7.2.2",
+    "@babel/plugin-transform-runtime": "^7.4.3",
     "@babel/preset-env": "7.4.3"
   }
 }
